	  removed csoundGetEnv() and csoundSetEnv() (now in envvar.c)
	* H/ustub.h:
	* Top/ustub.c:
	* util2/mixer/extract.c:
	  removed files
	* SConstruct:
	  allow building dynamic Csound library (static is still the default)
	  ustub library is no longer built
	* Top/argdecode.c:
	  new command line option: --env (sets/appends to environment variable)
	  removed empty function argdecodeRESET()

2005-03-01  Michael Gogins <gogins@pipeline.com>
	* Updated CsoundVST code to use Istvan Varga's MIDI driver system,
	so that CsoundVST works again as a VST plugin, at least in 
	"Csound classic" mode.

2005-03-01	Istvan Varga	<istvan@csounds.com>
	* Opcodes/gab/gab.c:
	  fixes in Maldonado opcodes
	* Top/dl_opcodes.c:
	  fixed -v crash
	* Engine/memalloc.c:
	  print function names correctly
	* Engine/entry2.c:
	  allow opcode names like FLpanel_end, FLgroup_end, etc.
	* InOut/midirecv.c:
	  restored original algorithm for assignment of default instr numbers
	* InOut/libsnd_u.c:
	* OOps/pvxanal.c:
	* OOps/ugens8.c:
	* Top/pvanal.c:
	  bug fixes in sound I/O, pvanal, and pvoc

2005-02-28	Istvan Varga	<istvan@csounds.com>
	* cleanup.sh:
	  new script to remove files generated during compilation
	* OOps/fout.c:
	* Opcodes/fluidOpcodes/fluidOpcodes.cpp:
	* Opcodes/OSC-Kit/OSC-priority-queue.c:
	* Opcodes/OSC-Kit/OSC-timetag.c:
	* util2/mixer/xtrct.c:
	  fixed compiler warnings
	* American.xmg:
	* English.xmg:
	* csound.pdf:
	* csound.xmg:
	  removed files from repository

2005-02-27	Steven Yi <stevenyi@csounds.com>
	* frontends/CsoundVST/CppSound.hpp: changed #include of cs.h to 
	csoundCore.h

2005-02-27  Michael Gogins <gogins@pipeline.com>
	* Changed fluid* opcodes: removed Gogins version, merged
	option to print presets to fluidLoad and added fluidControl opcode
	from Gogins version, added new fluidAllOut opcode to collect
	all audio from all Fluidsynth engines in a performance.
	* Removed Opcodes/fluid directory (Opcodes/fluidOpcodes now